fix scrollbar mozilla

--- a/html/assets/css/sass/layout/_sidebar.scss
+++ b/html/assets/css/sass/layout/_sidebar.scss
@@ -176,8 +176,6 @@
             }
             &-list {
                 .checkbox-list {
-                    list-style: none;
-                    padding: 0 15px;
                     max-height: 130px;
                 }
             }
