--- a/html/assets/css/style.css
+++ b/html/assets/css/style.css
@@ -1801,8 +1801,6 @@ body.modal-open,
 }
 
 #sidebar .filters .filter-list .checkbox-list {
-  list-style: none;
-  padding: 0 15px;
   max-height: 130px;
 }
 
